@@ -36,10 +36,11 @@ Agregado tipo de medidor Esfera en Ver Sensores
 Mejorada compilación: opciones --enable-memptr --enable-visualmem --enable-cpustats están activadas por defecto en ./configure
 Mejorada emulación del Inves Spectrum+: alertar cuando un juego puede resetearse debido al bug de Inves de write-on-interrupt
 Mejorado el core de emulación de Spectrum de la CPU Z80: agregado estado wait (necesario para emular el microdrive)
+Mejorada emulación PCW: Permitir cambios de modo video modelos Plus
 Mejorado snapshot ZSF: guardar estado de Datagear DMA
 Permitir grabar snapshots .Z80 de TC2048, TC2068, TS2068. Permitir cargar snapshots .Z80 de TC2048, TC2068
 
-Mejorada emulación de Spectrum Next:
+Mejorada emulación de Spectrum Next (lo siguiente permite, por ejemplo, ejecutar la versión de Atic Atac para Next):
 - Agregado modos de capas 6 and 7 (modos mezcla)
 - Agregado NMI sin stack
 - Agregado Canales DAC A,B,C,D
