@@ -36,10 +36,11 @@ Added Sphere Meter Type to View Sensors
 Improve compilation: settings --enable-memptr --enable-visualmem --enable-cpustats are enabled by default on ./configure
 Improved Inves Spectrum+ emulation: alert when a game may crash due to the Inves write-on-interrupt bug
 Improved Spectrum Z80 CPU emulation core: add wait state (needed to emulate microdrive)
+Improved PCW emulation: allow Plus models videomode changes
 Improved ZSF snapshot: save Datagear DMA state
 Allow saving .Z80 TC2048, TC2068, TS2068 snapshots. Allow loading .Z80 TC2048, TC2068 snapshots
 
-Improved Spectrum Next emulation:
+Improved Spectrum Next emulation (the following allows, for example, run Atic Atac version for Next):
 - Added Layer modes 6 and 7 (blend modes)
 - Added stackless NMI
 - Added DAC Channels A,B,C,D
